--- a/app/templates/GM_add_city.html
+++ b/app/templates/GM_add_city.html
@@ -96,8 +96,8 @@
 
     <!-- Button Container -->
     <div class="button-container">
-        <a href="{{ url_for('city.home') }}" class="button">All Cities</a>
-        <a href="{{ url_for('main.gm_dashboard') }}" class="button">Game Master Interface</a>
+        <a href="{{ url_for('gm.view_cities') }}" class="button">All Cities</a>
+        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Centered Form -->
