--- a/app/templates/GM_edit_item.html
+++ b/app/templates/GM_edit_item.html
@@ -109,9 +109,9 @@
 <body>
     <h1>Edit {{ item.name }}</h1>
 
-    <div class="button-container">
-        <a href="{{ url_for('item.view_all_items') }}" class="button">All Items</a>
-        <a href="{{ url_for('main.gm_dashboard') }}" class="button">Game Master Interface</a>
+    <div class="nav-buttons">
+        <a href="{{ url_for('gm.view_items') }}" class="button">All Items</a>
+        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
     </div>
 
     <form method="POST">
