--- a/app/templates/GM_edit_shop.html
+++ b/app/templates/GM_edit_shop.html
@@ -98,9 +98,9 @@
     <h1>Edit Shop</h1>
 
     <!-- Navigation Button Container -->
-    <div class="button-container">
-        <a href="{{ url_for('shop.view_all_shops') }}" class="button">All Shops</a>
-        <a href="{{ url_for('main.gm_dashboard') }}" class="button">Game Master Interface</a>
+    <div class="nav-buttons">
+        <a href="{{ url_for('gm.view_shops') }}" class="button">All Shops</a>
+        <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
     </div>
 
     <!-- Centered Form -->
