--- a/app/templates/GM_edit_shop.html
+++ b/app/templates/GM_edit_shop.html
@@ -140,7 +140,7 @@
     </form>
 
     <!-- Form for Deleting the Shop -->
-    <form method="POST" action="{{ url_for('shop.delete_shop', shop_id=shop.shop_id) }}">
+    <form method="POST" action="{{ url_for('gm.delete_shop', shop_id=shop.shop_id) }}">
         <button type="submit" style="background-color: red;">Delete Shop</button>
     </form>
 </body>
