--- a/app/templates/GM_edit_city.html
+++ b/app/templates/GM_edit_city.html
@@ -106,7 +106,7 @@
 
     <!-- Navigation Button Container -->
     <div class="button-container">
-        <a href="{{ url_for('shop.view_city_shops', city_id=city.city_id) }}" class="button">Manage Shops</a>
+        <a href="{{ url_for('gm.view_city_shops', city_id=city.city_id) }}" class="button">Manage Shops</a>
         <a href="{{ url_for('gm.view_cities') }}" class="button">All Cities</a>
         <a href="{{ url_for('gm.home') }}" class="button">Game Master Interface</a>
     </div>
