Cleaned up useless files

--- a/app/templates/GM_Home.html
+++ b/app/templates/GM_Home.html
@@ -240,10 +240,10 @@
         <h2>Simulation Controls</h2>
         <div class="simulation-controls">
             <button class="speed-button" data-speed="pause" onclick="updateSimulationSpeed('pause')">Pause</button>
-            <button class="speed-button" data-speed="1x" onclick="updateSimulationSpeed('1x')">1x</button>
-            <button class="speed-button" data-speed="5x" onclick="updateSimulationSpeed('5x')">5x</button>
-            <button class="speed-button" data-speed="100x" onclick="updateSimulationSpeed('100x')">100x</button>
-            <button class="speed-button" data-speed="1000x" onclick="updateSimulationSpeed('1000x')">1000x</button>
+            <button class="speed-button" data-speed="1x" onclick="updateSimulationSpeed('1x')">1 Hour</button>
+            <button class="speed-button" data-speed="5x" onclick="updateSimulationSpeed('5x')">1 Day</button>
+            <button class="speed-button" data-speed="100x" onclick="updateSimulationSpeed('100x')">1 Week</button>
+            <button class="speed-button" data-speed="1000x" onclick="updateSimulationSpeed('1000x')">1 Month</button>
             <button class="manual-tick-button" onclick="performManualTick()">Manual Tick</button>
         </div>
         <div class="simulation-status">
